# cw_3_data_base_hh

./: main.py  pyproject.toml
src/: db_manager.py  external_api.py  utils.py  viewer.py
