[project]
name = "cw-3-data-base-hh"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.10"
requests = "^2.32.3"
dotenv = "^0.9.9"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
pytest-cov = "^6.1.1"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119
multi_line_output = 3